Begin 1.21.1 variant update port