@@ -1,6 +1,10 @@
 package com.evandev.fieldguide.client.gui.screens;
 
 import com.evandev.fieldguide.Constants;
+import com.evandev.fieldguide.api.Category;
+import com.evandev.fieldguide.api.CompositeFieldGuideEntry;
+import com.evandev.fieldguide.api.VariantDef;
+import com.evandev.fieldguide.api.VirtualFieldGuideEntry;
 import com.evandev.fieldguide.client.ClientConstants;
 import com.evandev.fieldguide.client.ClientFieldGuideManager;
 import com.evandev.fieldguide.client.FieldGuideClient;
@@ -10,11 +14,12 @@ import com.evandev.fieldguide.client.gui.util.EntryRenderHelper;
 import com.evandev.fieldguide.client.gui.widget.FieldGuideSearchBox;
 import com.evandev.fieldguide.client.gui.widget.PageTurnButton;
 import com.evandev.fieldguide.client.progress.ProgressManager;
+import com.evandev.fieldguide.compat.cobblemon.FieldGuideCobblemonCompat;
 import com.evandev.fieldguide.compat.exposure.ClientExposureCompat;
-import com.evandev.fieldguide.config.ModConfig;
-import com.evandev.fieldguide.data.Category;
-import com.evandev.fieldguide.data.CompositeFieldGuideEntry;
+import com.evandev.fieldguide.config.ClientConfig;
+import com.evandev.fieldguide.config.ServerConfig;
 import com.evandev.fieldguide.platform.Services;
+import com.evandev.fieldguide.util.FieldGuideVariantManager;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
@@ -29,7 +34,7 @@ import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.FormattedCharSequence;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
-import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.block.Block;
@@ -51,7 +56,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
     public static int lastOpenedJournalPage = 0;
     private static Registry<Biome> biomeRegistry;
     private static ResourceLocation lastOpenedCategory = null;
-    private final Map<EntityType<?>, Entity> entryCache = new HashMap<>();
+    private final Map<ResourceLocation, Entity> entryCache = new HashMap<>();
     public boolean isSearching = false;
     private boolean initialSearchFocus = false;
     private ItemStack searchItemStack;
@@ -107,7 +112,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
     @Override
     protected void init() {
         if (this.getSelectedCategory() == null && this.searchQuery.isEmpty()) {
-            String defaultMode = ModConfig.get().defaultScreen;
+            String defaultMode = ClientConfig.get().defaultScreen;
             if ("current_biome".equals(defaultMode) && this.minecraft != null && this.minecraft.level != null && this.minecraft.player != null) {
                 var biomeOpt = this.minecraft.level.getBiome(this.minecraft.player.blockPosition()).unwrapKey();
                 biomeOpt.ifPresent(biomeResourceKey -> this.searchQuery = "=!" + biomeResourceKey.location());
@@ -142,7 +147,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
                 if (intro != null) {
                     this.setSelectedCategory(intro);
                 } else if (!this.getSortedCategories().isEmpty()) {
-                    this.setSelectedCategory(this.getSortedCategories().getFirst());
+                    this.setSelectedCategory(this.getSortedCategories().get(0));
                 }
             }
         }
@@ -336,19 +341,13 @@ public class FieldGuideCategoryScreen extends BookScreen {
     private void handleEntryClick(Object entry) {
         Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.BOOK_PAGE_TURN, 1.0F));
 
-        ResourceLocation entryId = ClientFieldGuideManager.getEntryId(entry);
-        EntryVisual visual = entryId != null ? ClientFieldGuideManager.getInstance().getEntryVisual(entryId) : null;
+        EntryVisual visual = ClientFieldGuideManager.getInstance().getEntryVisual(entry);
         Object coreEntry = entry instanceof CompositeFieldGuideEntry composite ? composite.displayEntry() : entry;
+        boolean isCobblemon = entry instanceof CompositeFieldGuideEntry comp && comp.id() != null && comp.id().getNamespace().equals("fieldguide") && comp.id().getPath().startsWith("cobblemon/");
 
-        if (coreEntry instanceof EntityType<?> type) {
-            Entity entity = entryCache.get(type);
-            if (entity == null && Objects.requireNonNull(this.minecraft).level != null) {
-                try {
-                    entity = type.create(this.minecraft.level);
-                    entryCache.put(type, entity);
-                } catch (Exception ignored) {
-                }
-            }
+        if (coreEntry instanceof EntityType<?> || isCobblemon) {
+            Entity entity = getCachedEntity(entry);
+
             if (entity != null && ClientFieldGuideManager.isUnlocked(entry)) {
                 if (visual != null && visual.customSound != null) {
                     Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvent.createVariableRangeEvent(visual.customSound), 1.0F, 1.0F));
@@ -428,7 +427,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
                 if (searchQuery.startsWith("=!")) {
                     ResourceLocation biomeId = ResourceLocation.tryParse(searchQuery.substring(2));
                     if (biomeId != null && biomeRegistry.containsKey(biomeId)) {
-                        int titleColor = ModConfig.get().getTextColorInt();
+                        int titleColor = ClientConfig.get().getTextColorInt();
                         int iconOffset = 0;
 
                         if (Services.PLATFORM.isModLoaded("immersiveoverlays")) {
@@ -448,7 +447,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
                         renderTitle(guiGraphics, Component.translatable("gui.fieldguide.searching_biomes"));
                     }
                 } else if (searchQuery.startsWith("=#")) {
-                    renderTitle(guiGraphics, Component.literal("#" + searchQuery.substring(2)), 0, ModConfig.get().getTextColorInt());
+                    renderTitle(guiGraphics, Component.literal("#" + searchQuery.substring(2)), 0, ClientConfig.get().getTextColorInt());
                 } else if (searchQuery.startsWith("=^")) {
                     String dropQuery = searchQuery.substring(2).toLowerCase(Locale.ROOT);
                     ItemStack displayStack = ItemStack.EMPTY;
@@ -460,6 +459,11 @@ public class FieldGuideCategoryScreen extends BookScreen {
                     } else {
                         for (Object entry : currentEntries) {
                             List<ItemStack> drops = ClientFieldGuideManager.getInstance().getDrops(entry);
+
+                            if (drops.isEmpty() && entry instanceof CompositeFieldGuideEntry comp && comp.id() != null && comp.id().getNamespace().equals("fieldguide") && comp.id().getPath().startsWith("cobblemon/")) {
+                                drops = FieldGuideCobblemonCompat.getCobblemonDrops(entry);
+                            }
+
                             for (ItemStack stack : drops) {
                                 if (stack.getHoverName().getString().toLowerCase(Locale.ROOT).equals(dropQuery)) {
                                     displayStack = stack;
@@ -477,7 +481,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
 
                     if (!displayStack.isEmpty()) {
                         guiGraphics.renderItem(displayStack, iconX, iconY);
-                        renderTitle(guiGraphics, Component.translatable("gui.fieldguide.drops", dropName), iconSize, ModConfig.get().getTextColorInt());
+                        renderTitle(guiGraphics, Component.translatable("gui.fieldguide.drops", dropName), iconSize, ClientConfig.get().getTextColorInt());
                     } else {
                         renderTitle(guiGraphics, Component.translatable("gui.fieldguide.searching_drops"));
                     }
@@ -503,7 +507,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
         } else if (isSearching) {
             if (currentEntries.isEmpty()) {
                 Component noResults = Component.translatable("gui.fieldguide.no_results");
-                guiGraphics.drawString(this.font, noResults, this.leftPageBounds.x_center() - this.font.width(noResults) / 2, this.leftPageBounds.y_center() - (font.lineHeight / 2), ModConfig.get().getTextMutedColorInt(), false);
+                guiGraphics.drawString(this.font, noResults, this.leftPageBounds.x_center() - this.font.width(noResults) / 2, this.leftPageBounds.y_center() - (font.lineHeight / 2), ClientConfig.get().getTextMutedColorInt(), false);
             }
         }
 
@@ -515,8 +519,6 @@ public class FieldGuideCategoryScreen extends BookScreen {
         if (currentPage > 0 || isSearching) {
             renderGrid(guiGraphics, mouseX, mouseY);
         }
-
-        guiGraphics.pose().popPose();
     }
 
     private @NotNull Component getSearchTitle() {
@@ -534,7 +536,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
     }
 
     private void renderTitle(GuiGraphics guiGraphics, Component text) {
-        renderTitle(guiGraphics, text, 0, ModConfig.get().getTextMutedColorInt());
+        renderTitle(guiGraphics, text, 0, ClientConfig.get().getTextMutedColorInt());
     }
 
     private void renderTitle(GuiGraphics guiGraphics, Component text, int offset, int color) {
@@ -563,7 +565,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
         for (FormattedCharSequence line : lines) {
             int lineWidth = this.font.width(line);
             int lineX = this.leftPageBounds.x_center() - lineWidth / 2;
-            guiGraphics.drawString(this.font, line, lineX, titleY, ModConfig.get().getTextTitleColorInt(), false);
+            guiGraphics.drawString(this.font, line, lineX, titleY, ClientConfig.get().getTextTitleColorInt(), false);
             titleY += font.lineHeight;
         }
 
@@ -577,8 +579,8 @@ public class FieldGuideCategoryScreen extends BookScreen {
             String countText = String.valueOf(unlocked);
             String totalText = String.valueOf(total);
 
-            guiGraphics.drawString(this.font, countText, x - xOffset - font.width(countText) / 2, y, ModConfig.get().getTextColorInt(), false);
-            guiGraphics.drawString(this.font, totalText, x + xOffset - font.width(totalText) / 2, y, ModConfig.get().getTextColorInt(), false);
+            guiGraphics.drawString(this.font, countText, x - xOffset - font.width(countText) / 2, y, ClientConfig.get().getTextColorInt(), false);
+            guiGraphics.drawString(this.font, totalText, x + xOffset - font.width(totalText) / 2, y, ClientConfig.get().getTextColorInt(), false);
 
             // Progress Bar
             if (unlocked > 0) {
@@ -598,7 +600,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
         // Title
         Component title = Component.translatable("gui.fieldguide.main.default");
         int titleY = this.rightPageBounds.top() + 8;
-        guiGraphics.drawString(this.font, title, this.rightPageBounds.x_center() - font.width(title) / 2, titleY, ModConfig.get().getTextMutedColorInt(), false);
+        guiGraphics.drawString(this.font, title, this.rightPageBounds.x_center() - font.width(title) / 2, titleY, ClientConfig.get().getTextMutedColorInt(), false);
 
         for (int i = 0; i < ITEMS_PER_PAGE; i++) {
             if (i >= recentEntries.size()) break;
@@ -613,7 +615,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
                 guiGraphics.blit(Constants.LIST_ENTRY_BACKGROUND_TEXTURE, bounds.x(), bounds.y(), 0, 0, CELL_SIZE, CELL_SIZE, CELL_SIZE, CELL_SIZE * 2);
             }
 
-            renderEntryInGrid(guiGraphics, entry, bounds.x_center(), bounds.y_center(), 30, true);
+            renderEntryInGrid(guiGraphics, entry, bounds.x_center(), bounds.y_center(), true);
 
             if (ClientFieldGuideManager.isNew(entry)) {
                 renderNewLabel(guiGraphics, bounds);
@@ -655,7 +657,7 @@ public class FieldGuideCategoryScreen extends BookScreen {
                     guiGraphics.blit(Constants.LIST_ENTRY_BACKGROUND_TEXTURE, bounds.x(), bounds.y(), 0, 0, CELL_SIZE, CELL_SIZE, CELL_SIZE, CELL_SIZE * 2);
                 }
 
-                renderEntryInGrid(guiGraphics, entry, bounds.x_center(), bounds.y_center(), 30, unlocked);
+                renderEntryInGrid(guiGraphics, entry, bounds.x_center(), bounds.y_center(), unlocked);
 
                 if (ClientFieldGuideManager.isNew(entry)) {
                     renderNewLabel(guiGraphics, bounds);
@@ -676,6 +678,31 @@ public class FieldGuideCategoryScreen extends BookScreen {
         }
     }
 
+    private Entity getCachedEntity(Object entry) {
+        ResourceLocation id = ClientFieldGuideManager.getEntryId(entry);
+        if (id == null) return null;
+        if (entryCache.containsKey(id)) return entryCache.get(id);
+
+        if (this.minecraft == null || this.minecraft.level == null) return null;
+
+        Entity entity = null;
+        if (entry instanceof CompositeFieldGuideEntry && id.getNamespace().equals("fieldguide") && id.getPath().startsWith("cobblemon/")) {
+            entity = FieldGuideCobblemonCompat.getDummyPokemon(id, this.minecraft.level);
+        } else {
+            Object coreEntry = entry instanceof CompositeFieldGuideEntry composite ? composite.displayEntry() : entry;
+            if (coreEntry instanceof EntityType<?> type) {
+                try {
+                    entity = type.create(this.minecraft.level);
+                } catch (Exception e) {
+                    Constants.LOG.error("Failed to create entity for guide: {}", type.getDescription().getString());
+                }
+            }
+        }
+
+        entryCache.put(id, entity);
+        return entity;
+    }
+
     private void renderNewLabel(GuiGraphics guiGraphics, Bounds bounds) {
         guiGraphics.pose().pushPose();
         guiGraphics.pose().translate(0, 0, 200);
@@ -684,20 +711,35 @@ public class FieldGuideCategoryScreen extends BookScreen {
     }
 
     private void renderEntryTooltip(GuiGraphics guiGraphics, Object entry, int mouseX, int mouseY, boolean unlocked) {
-        if (unlocked || ModConfig.get().showUndiscoveredNames) {
+        if (unlocked || ServerConfig.get().showUndiscoveredNames) {
             Component name = ClientFieldGuideManager.getEntryName(entry);
-
             List<Component> tooltip = new ArrayList<>();
             tooltip.add(name);
 
+            Object coreEntry = entry instanceof CompositeFieldGuideEntry composite ? composite.displayEntry() : entry;
+            Entity dummy = getCachedEntity(entry);
+            if (dummy != null && (coreEntry instanceof EntityType<?>)) {
+                List<VariantDef> variants = FieldGuideVariantManager.getVariants(dummy);
+                if (variants.size() > 1) {
+                    int unlockedCount = ServerConfig.get().unlockAllVariants ? variants.size() : 0;
+
+                    if (!ServerConfig.get().unlockAllVariants) {
+                        for (VariantDef var : variants) {
+                            if (ClientFieldGuideManager.isVariantUnlocked(entry, var.id())) {
+                                unlockedCount++;
+                            }
+                        }
+                    }
+                    tooltip.add(Component.translatable("fieldguide.tooltip.variants", unlockedCount, variants.size()).withStyle(ChatFormatting.GRAY));
+                }
+            }
+
             if (this.minecraft != null && this.minecraft.options.advancedItemTooltips) {
                 ResourceLocation id = ClientFieldGuideManager.getEntryId(entry);
-
                 if (id != null) {
                     tooltip.add(Component.literal(id.toString()).withStyle(ChatFormatting.DARK_GRAY));
                 }
             }
-
             guiGraphics.renderComponentTooltip(this.font, tooltip, mouseX, mouseY);
         } else {
             guiGraphics.renderTooltip(this.font, Component.translatable("fieldguide.unknown"), mouseX, mouseY);
@@ -725,18 +767,20 @@ public class FieldGuideCategoryScreen extends BookScreen {
 
     private void renderPageNumber(int page, Bounds bounds, GuiGraphics guiGraphics) {
         String str = page + "";
-        guiGraphics.drawString(this.font, str, bounds.x_center() - font.width(str) / 2, bounds.bottom() - 11, ModConfig.get().getPageNumberColorInt(), false);
+        guiGraphics.drawString(this.font, str, bounds.x_center() - font.width(str) / 2, bounds.bottom() - 11, ClientConfig.get().getPageNumberColorInt(), false);
     }
 
-    private void renderEntryInGrid(GuiGraphics guiGraphics, Object entry, int x, int y, int scale, boolean unlocked) {
+    private void renderEntryInGrid(GuiGraphics guiGraphics, Object entry, int x, int y, boolean unlocked) {
         Object coreEntry = entry instanceof CompositeFieldGuideEntry composite ? composite.displayEntry() : entry;
+        boolean isCobblemon = entry instanceof VirtualFieldGuideEntry virt && virt.virtualType().equals("cobblemon");
+        boolean isTutorial = entry instanceof VirtualFieldGuideEntry virt && virt.virtualType().equals("tutorial");
 
-        if (unlocked && Services.PLATFORM.isModLoaded("exposure") && ModConfig.get().exposureShowPhotographsInGrid) {
+        if (unlocked && Services.PLATFORM.isModLoaded("exposure") && ClientConfig.get().exposureShowPhotographsInGrid) {
             ItemStack existingPhoto = ProgressManager.getInstance().getPhotograph(entry);
             if (!existingPhoto.isEmpty()) {
                 ClientExposureCompat.renderPhotographInGrid(guiGraphics, x - (CELL_SIZE / 2), y - (CELL_SIZE / 2), CELL_SIZE, CELL_SIZE, existingPhoto);
                 return;
-            } else if (ModConfig.get().keepSilhouetteWhenUnlocked) {
+            } else if (ServerConfig.get().keepSilhouetteWhenUnlocked) {
                 ClientExposureCompat.renderMissingPhotoBackground(guiGraphics, x - (CELL_SIZE / 2), y - (CELL_SIZE / 2), CELL_SIZE, CELL_SIZE);
             }
         }
@@ -747,33 +791,19 @@ public class FieldGuideCategoryScreen extends BookScreen {
             } else {
                 EntryRenderHelper.renderBlock(guiGraphics, block, x, y, 15.0F, unlocked, false, 1.0F);
             }
-        } else if (coreEntry instanceof EntityType<?> type) {
-            if (this.minecraft != null && this.minecraft.level != null) {
-                Entity entity = entryCache.get(type);
-                if (entity == null && !entryCache.containsKey(type)) {
-                    if (this.minecraft.level != null) {
-                        try {
-                            entity = type.create(this.minecraft.level);
-                            if (entity != null) {
-                                if (Services.PLATFORM.isModLoaded("mixed_litter")) {
-                                    Services.PLATFORM.applyMixedLitterCompat(entity);
-                                }
-
-                                entryCache.put(type, entity);
-                            }
-                        } catch (Exception e) {
-                            Constants.LOG.error("Failed to create entity for guide: {}", type.getDescription().getString());
-                            entryCache.put(type, null);
-                        }
-                    }
-                }
-
-                if (entity instanceof LivingEntity living) {
-                    EntryRenderHelper.renderEntityNormalized(guiGraphics, living, x, y, CELL_SIZE - 8, CELL_SIZE - 8, scale, unlocked, false, 1.0F);
-                }
+        } else if (isCobblemon) {
+            EntryRenderHelper.renderCobblemon(guiGraphics, (VirtualFieldGuideEntry) entry, x, y, CELL_SIZE - 8, CELL_SIZE - 8, unlocked, false, 1.0F);
+        } else if (isTutorial) {
+            EntryRenderHelper.renderTutorial(guiGraphics, (VirtualFieldGuideEntry) entry, x, y, CELL_SIZE - 8, CELL_SIZE - 8, unlocked, false, 1.0F);
+        } else if (coreEntry instanceof EntityType<?>) {
+            Entity entity = getCachedEntity(entry);
+            if (entity != null) {
+                EntryRenderHelper.renderEntityNormalized(guiGraphics, entity, x, y, CELL_SIZE - 8, CELL_SIZE - 8, unlocked, false, 1.0F);
             }
         } else if (coreEntry instanceof Block block) {
             EntryRenderHelper.renderBlock(guiGraphics, block, x, y, 15.0F, unlocked, false, 1.0F);
+        } else if (coreEntry instanceof Item item) {
+            EntryRenderHelper.renderItem(guiGraphics, item, x, y, 20.0F, unlocked, false, 1.0F);
         }
     }
 }
